--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DP-Date
-version:      0.10
+version:      0.101
 version_from: Date.pm
 installdirs:  site
 requires:
+    Test::Easy:                    1.01
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.16
